--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.send_message">
+    package="com.example.send_message">
+
+    <uses-permission android:name="android.permission.SEND_SMS" />
 </manifest>
